--- a/dos33.html
+++ b/dos33.html
@@ -608,7 +608,7 @@ The <span class="i">intent</span> of providing this copyrighted source code is
  as a convenience for the curious as a <span class="b">means to learn</span>.
 <p>
 <b class='warn'>WARNING:</b> DOS 3.3 was written by an amateur.
- <i>Reading this source code will probably make you angry</i> at all the <b>dumb shit</b> it does.
+ <i>Reading this source code will probably make you angry</i> at all the <a class='link' href='#VTOC'>dumb shit</a> it does.
  Look for all my <b>*sigh*</b> comments and
  <b><a class="dumb" href="#HNTDAFS1">HNTDAFS</a></b> (How NOT to Design a File System) links.
  While knowing "<b>What To Do</b>" is important, knowing "<b>What NOT To Do</b>" is even <i>more</i> important.
@@ -1535,62 +1535,62 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 1F25:D0 7D          107             BNE PRRTN       ; BR IF NOT
 1F27:A2 00          108 <a class='f' name='COS2A'    >COS2A       </a>LDX #<span class='n'>0</span>          ; SET FOR POSSIBLE C-D NEXT     ; C-D = Control-D <a class='magic'>magic number</a> COS_STATE_FIRST_CONTROL_D = 0
 1F29:8E 52 2A       109             STX OSTATE      ; NEXT STATE
-                    110             JMP PRRTN       ; GO PRINT CHAR
+1F2C:4C A4 1F       110             JMP PRRTN       ; GO PRINT CHAR                 ; <a class='mem' name='_1F2C'>wastes</a> 1 byte, $1F83 - $1F2C = $57, <span class='code'>BEQ PRRTN</span>
                     111             PAGE
                     112 ;
                     113 ;COS3 - KEY IN ECHO PRINT
                     114 ;
 <hr>                    115 <a class='f' name='COS3'     >COS3        </a>EQU *
-                    116             LDX #<span class='n'>0</span>                                          ; <a class='magic' name='_1Fxx'>magic number</a> COS_STATE_0
-                    117             STX OSTATE      ; RESET OUT STATE
-                    118             CMP #$<span class='n'>8D</span>        ; IS IT CR
-                    119             BEQ COS3A       ; IF CR THEN CMD CHECK
-                    120 <a class='f' name='COS3B'    >COS3B       </a>LDA ESTATE      ; ELSE: IF NOT EXECUTE
-                    121             BEQ PRRTN       ; THEN PRINT CHAR
-                    122             BNE DRTNI       ; ELSE: PRINT IF MON INPUT      ; Data Return In
-                    123 <a class='f' name='COS3A'    >COS3A       </a>PHA             ;SAVE CARRAGE RETURN
-                    124             SEC             ;ANTICIPATE EXEC FILE INPUT.
-                    125             LDA ESTATE      ;CHECK EXEC FLAG
-                    126             BNE COS3C       ;BR IF WAS INPUT FROM EXEC.
-                    127             JSR TSTRUN      ;GO TEST FOR RUN MODE.
-                    128 <a class='f' name='COS01'    >COS3C       </a>PLA
-                    129             BCC COS3B       ;IGNORE INPUT IF RUNNING.
-                    130             LDX SVX         ; GET LINE INDEX
-                    131             JMP COS1A
+1F2F:A2 00          116 <!--                       -->            LDX #<span class='n'>0</span>                                          ; <a class='magic' name='_1Fxx'>magic number</a> COS_STATE_0
+1F31:8E 52 2A       117 <!--                       -->            STX OSTATE      ; RESET OUT STATE
+1F34:C9 8D          118 <!--                       -->            CMP #$<span class='n'>8D</span>        ; IS IT CR
+1F36:F0 07          119 <!--                       -->            BEQ COS3A       ; IF CR THEN CMD CHECK
+1F38:AD B3 2A       120 <a class='f' name='COS3B'    >COS3B       </a>LDA ESTATE      ; ELSE: IF NOT EXECUTE
+1F3B:F0 67          121 <!--                       -->            BEQ PRRTN       ; THEN PRINT CHAR
+1F3D:D0 5E          122 <!--                       -->            BNE DRTNI       ; ELSE: PRINT IF MON INPUT      ; Data Return In
+1F3F:48             123 <a class='f' name='COS3A'    >COS3A       </a>PHA             ;SAVE CARRAGE RETURN
+1F40:38             124 <!--                       -->            SEC             ;ANTICIPATE EXEC FILE INPUT.
+1F41:AD B3 2A       125 <!--                       -->            LDA ESTATE      ;CHECK EXEC FLAG
+1F44:D0 03          126 <!--                       -->            BNE COS3C       ;BR IF WAS INPUT FROM EXEC.
+1F46:20 5E 26       127 <!--                       -->            JSR TSTRUN      ;GO TEST FOR RUN MODE.
+1F49:68             128 <a class='f' name='COS01'    >COS3C       </a>PLA
+1F4A:90 EC          129 <!--                       -->            BCC COS3B       ;IGNORE INPUT IF RUNNING.
+1F4C:AE 5A 2A       130 <!--                       -->            LDX SVX         ; GET LINE INDEX
+1F4F:4C 15 1F       131 <!--                       -->            JMP COS1A                                       ; <span class='todo'>TODO</span> Can this ever be zero??
                     132 ;
                     133 ;COS4 - DISK OUTPUT MODE
                     134 ;
                     135 <a class='f' name='COS4'     >COS4        </a>EQU *
-                    136             CMP #$<span class='n'>8D</span>        ; IS IT CR
-                    137             BNE COS4A       ; BR IF NOT CR
-                    138             LDA #5          ; SET STATE FOR CNTL-D
-                    139             STA OSTATE      ; EXAMINE
-                    140 <a class='f' name='COS4A'    >COS4A       </a>JSR OCTD        ; GO OUTPUT CJHAR TO DISK       ; *spelling* Char
-                    141             JMP DRTNO       ; GO TO DATA RETURN (OUT)
+1F52:C9 8D          136             CMP #$<span class='n'>8D</span>        ; IS IT CR
+1F54:D0 05          137             BNE COS4A       ; BR IF NOT CR
+1F56:A9 05          138             LDA #5          ; SET STATE FOR CNTL-D
+1F58:8D 52 2A       139             STA OSTATE      ; EXAMINE
+1F5B:20 0E 26       140 <a class='f' name='COS4A'    >COS4A       </a>JSR OCTD        ; GO OUTPUT CJHAR TO DISK       ; *spelling* Char
+1F5E:4C 99 1F       141             JMP DRTNO       ; GO TO DATA RETURN (OUT)
                     142 ;
                     143 ;COS5 - DISK OUTPUT MODE - 1ST CHAR
                     144 ;
                     145 <a class='f' name='COS5'     >COS5        </a>EQU *
-                    146             CMP CCHAR       ; IS IT CNTL D
-                    147             BEQ COS0        ; BR IF CNTL- D
-                    148             CMP #$<span class='n'>8A</span>        ; LINE FEED?
-                    149             BEQ COS4A
-                    150             LDX #<span class='n'>4</span>
-                    151             STX OSTATE      ; SET NEW OUT STATE             ; No Shit Sherlock, *what* is State 4 ??
-                    152             BNE COS4        ; BR IF NOT CNTL D              ; &uarr; (always) <a class='mem' name='_'>wastes</a> 2 bytes, move COS5 before COS4 and remove this branch
+1F61:CD B2 2A       146             CMP CCHAR       ; IS IT CNTL D
+1F64:F0 85          147             BEQ COS0        ; BR IF CNTL- D
+1F66:C9 8A          148             CMP #$<span class='n'>8A</span>        ; LINE FEED?
+1F68:F0 F1          149             BEQ COS4A
+1F6A:A2 04          150             LDX #<span class='n'>4</span>
+1F6C:8E 52 2A       151             STX OSTATE      ; SET NEW OUT STATE             ; No Shit Sherlock, *what* is State 4 ??
+1F6F:D0 E1          152             BNE COS4        ; BR IF NOT CNTL D              ; &uarr; (always) <a class='mem' name='_'>wastes</a> 2 bytes, move COS5 before COS4 and remove this branch
                     153 ;
                     154 ;COS6 - DISK INPUT ECHO
                     155 ;
-                    156 <a class='f' name='COS6'     >COS6        </a>LDA #<span class='n'>0</span>
-                    157             STA OSTATE      ; RESET OUT STATE = 0
-                    158             BEQ DRTNI       ; GO TO DATA IN RETURN
+1F71:A9 00          156 <a class='f' name='COS6'     >COS6        </a>LDA #<span class='n'>0</span>
+1F73:8D 52 2A       157             STA OSTATE      ; RESET OUT STATE = 0
+1F76:F0 25          158             BEQ DRTNI       ; GO TO DATA IN RETURN
                     159 ;
                     160 ; COS7 - SPECIAL FOR RECOVER FROM AS ROM/RAM RELOC.
                     161 ;
-                    162 <a class='f' name='COS7'     >COS7        </a>LDA #<span class='n'>0</span>          ; RESET RELOC STATE
-                    163             STA RSTATE
-                    164             JSR MVCSW       ;FOR COMPATABILITY ON REENTRY
-                    165             JMP ERUN1
+1F78:A9 00          162 <a class='f' name='COS7'     >COS7        </a>LDA #<span class='n'>0</span>          ; RESET RELOC STATE
+1F7A:8D B7 2A       163             STA RSTATE
+1F7D:20 51 28       164             JSR MVCSW       ;FOR COMPATABILITY ON REENTRY
+1F80:4C DC 24       165             JMP ERUN1
                     166             PAGE
                     167 ;
                     168 ;PRRTN - PRINT CHAR RETURN
@@ -1601,8 +1601,8 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     173 ; DRTNI - PRINT CHAR IF MONITOR DATA IN
                     174 ;
                     175 <a class='f' name='CERTN'    >CERTN       </a>EQU *
-                    176             LDA LBUFF       ; CHECK FOR PRINTED COMMAND
-                    177             CMP CCHAR
+1F83:AD 00 02       176             LDA LBUFF       ; CHECK FOR PRINTED COMMAND
+1F86:CD B2 2A       177             CMP CCHAR
                     178             BEQ CMDRTN      ; IF PC THEN NO RESET X REG
 <hr>                    179             LDA #$<span class='n'>8D</span>        ; CARRAGE RETURN                ; === Page #<a class='page' name='page47'>47</a>=== <a class='magic'>magic number</a> CR_HI
                     180             STA <a class='v' href='#LBUFF'>LBUFF</a>       ; TO OUT BUFFER
