--- a/dos33.html
+++ b/dos33.html
@@ -2550,18 +2550,18 @@ With that "legalese" out of the way ... enjoy the read!
 2515:8D 52 2A       008             STA <a class='v' href='#OSTATE'>OSTATE</a>      ; SET OSTATE=5                  ; /sarcasm <i>No Shit, Sherlock</i>
 <img src="char_output_state.png">
 2518:4C 83 1F       009             JMP <a class='x' href='#CERTN'>CERTN</a>
-                    010 ; 
-                    011 ;
+                    010 ;
+                    011 ; EREAD - READ COMD EXECUTE
                     012 ;
                     013 <a class='f' name='EREAD'    >EREAD       </a>EQU *
 251B:20 26 25       014             JSR <a class='x' href='#RWPOSN'>RWPOSN</a>      ; GO POSITION FILE IF REQD
 251E:A9 01          015             LDA #<span class='n'>1</span>    
 2520:8D 51 2A       016             STA <a class='v' href='#ISTATE'>ISTATE</a>      ; SET I STATE = DISK INPUT      ; /voice="Nick Burns" <i>See, that wasn't so hard!</i>
 2523:4C 83 1F       017             JMP <a class='x' href='#CERTN'>CERTN</a>                                       ; <a class='mem' name='_2523'>wastes</a> 1 bytes, <span class='code'>BNE EREAD-3</span>
-                    018 
-                    019 
-                    020 
-                    021 
+                    018 ;
+                    019 ; RWPOSN - POSTION FOR READ/ WRITE
+                    020 ;
+                    021 <a class='f' name='RWPOSN'   >RWPOSN      </a>EQU *
                     022 
                     023 
                     024 
