Fix broken link to Wasted Disk Space in TOC

--- a/dos33.html
+++ b/dos33.html
@@ -631,7 +631,7 @@ console.log( "TODO: CSS Monochrome" );
         <li>3.0 <a class='link' href='#Inefficiencies'     >Inefficiencies</a>                 </li>
         <ul class="toc">
             <li>3.1 <a class='link' href='#WastedMemory'   >Wasted Memory</a>                  </li>
-            <li>3.2 <a class='link' href='#WastedDiskSpace'>Wasted Disk Space</a>              </li>
+            <li>3.2 <a class='link' href='#WastedDisk'     >Wasted Disk Space</a>              </li>
             <li>3.3 <a class='link' href='#WastedSectors'  >Wasted Sectors</a>                 </li>
             <li>3.4 <a class='link' href='#BufferBloat'    >Buffer Bloat</a>                   </li>
         </ul>
