Spelling in XOPNCLS

--- a/dos33.html
+++ b/dos33.html
@@ -2198,7 +2198,7 @@ With that "legalese" out of the way ... enjoy the read!
                     229 EO3         EQU *
                     230             JSR ECLOSE      ; GO CLOSE IF OPEN
                     231 EO4         EQU *
-                    232             LDA CNUM+<span class='n'>1</span>      ; GET AVALL ENTRY
+                    232             LDA CNUM+<span class='n'>1</span>      ; GET AVALL ENTRY               ; *Spelling* Avail
                     233             BNE EO5         ; BR IF ONE AVAIL
                     234             JMP ENFA        ; DONE - NO FILES AVAIL
                     235 EO5         EQU *
