Fix lowercase in XOPNCLS

--- a/dos33.html
+++ b/dos33.html
@@ -2208,7 +2208,7 @@ With that "legalese" out of the way ... enjoy the read!
                     239 EO6         EQU *
                     240             JSR MVFN1       ; GO MOVE FILE NAME
                     241             JSR MVBUFP      ; GO MOVE BUF PTRS
-                    242             JSR OPNSUP      ; GO SET Up OPEN
+                    242             JSR OPNSUP      ; GO SET UP OPEN
 <hr>                    243             LDA TEMP1A      ; SET OPEN REQ                  ; === <a class='page' name='page154'>154</a> ===
                     244             STA CCBREQ
                     245             JMP DOSGO       ; GO OPEN
